test/src/e2e_vm_tests/test_programs/should_pass/language/import_trailing_comma/src/lib.sw
library;

pub struct B {
    pub b: u64,
}
pub struct C {
    pub c: u64,
}
pub struct D {
    pub d: u64,
}
