test/src/e2e_vm_tests/test_programs/should_fail/language/import_star_name_clash/src/a.sw
library;

pub struct MyStruct {
    pub a: u64,
}

pub enum MyEnum {
    A: u64,
    B: u64,
}

pub struct C {
    pub b: u64,
}
